# ugc-service

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.clickhouse.yml  docker-compose.kafka.yml  docker-compose.local.yml  docker-compose.mongo.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml  run.sh
.github/workflows/: assign-pr-author.yaml  ci.yaml  code-checker.yaml  variety_code_checker.yaml
dev/scripts/: insert.to.mongo.sh
doc/adr/: ugc_main_storage.md  ugc_service_implementation.md  ugc_storage.md
doc/openapi/: openapi-project-example.yaml
infra/backend/: Dockerfile
infra/backend_test/: Dockerfile
infra/clickhouse/: Dockerfile
infra/clickhouse/configs/: config.xml  initial.sql  (+1 more)
infra/elk/: .env.example  docker-compose.elk.yml
infra/etl/: Dockerfile
infra/filebeat/: Dockerfile  docker-compose.filebeat.yml
infra/kafka/: test-consumer.py  test-producer.py
infra/mongo/: docker-compose.yml
infra/nginx/: Dockerfile  nginx.conf
perfomance_tests/: clickhouse.py  utils.py
performance_tests/: Makefile  clickhouse.py  mongo.py  utils.py  vertica.py
performance_tests/mongo/: docker-compose.mongo.yml
performance_tests/read_operations/: .env.template  docker.compose.mongo.yml  docker.compose.postgres.yml  readme.md
performance_tests/vertica/: Dockerfile  docker-compose.vertica.yml
src/: .env.template  gunicorn.conf.py
src/app/: main.py
src/etl/: main.py  models.py  settings.py  test_load_batch.py  test_load_one.py
src/tests/: conftest.py
(+131 files in other folders)
